objects/Territory_Sharing_Criterion__c.object
<CustomObject>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                    <default>true</default>
                    <label>equals</label>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Sharing__c</fullName>
        <label>Territory Sharing</label>
        <referenceTo>Territory_Sharing__c</referenceTo>
        <relationshipName>Territory_Sharing_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PT - Territory Sharing Criterion</label>
    <nameField>
        <displayFormat>TSC-{000000}</displayFormat>
        <label>Territory Sharing Criterion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Sharing Criterion</pluralLabel>
    <recordTypes>
        <fullName>Account_Criteria</fullName>
        <active>true</active>
        <description>Territory sharing criteria for Account object</description>
        <label>Account Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Criteria</fullName>
        <active>true</active>
        <description>Territory sharing criteria for Lead object</description>
        <label>Lead Criteria</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>